--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "kartik-v/yii2-editable": "dev-master",
         "yiimaker/yii2-social-share": "^2.3",
         "kartik-v/yii2-mpdf": "dev-master",
-        "kriptograf/yii2-wishlist": "dev-master"
+        "kriptograf/yii2-wishlist": "dev-master",
+        "kartik-v/yii2-widget-typeahead": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
